grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) => seq($.statement, $._semicolon),

    _one_or_more_statements: ($) =>
      seq(repeat($._statement), $.statement, optional($._semicolon)),

    block: ($) =>
      prec.right(seq('{', optional($._one_or_more_statements), '}')),

    open_statement: ($) => seq('open', optional('!'), $.module_expression),

    _module_structure: ($) =>
      seq($._module_definition, optional($.module_type_annotation)),

    type_annotation: ($) => seq(':', $._inline_type),

    _type: ($) =>
      choice($._inline_type, $.variant_type, $.record_type, $.as_aliasing_type),

    _inline_type: ($) => choice($._non_function_inline_type, $.function_type),

    _non_function_inline_type: ($) =>
      choice(
        $._type_identifier,
        $.tuple_type,
        $.polyvar_type,
        $.object_type,
        $.record_type,
        $.generic_type,
        $.unit_type,
        $.module_pack,
        $.unit,
        $.polymorphic_type,
        alias($._as_aliasing_non_function_inline_type, $.as_aliasing_type),
      ),

    function_type: ($) =>
      prec.left(seq($.function_type_parameters, '=>', $._type)),

    function_type_parameters: ($) =>
      choice($._non_function_inline_type, $._function_type_parameter_list),

    _function_type_parameter_list: ($) =>
      seq('(', commaSept(alias($.function_type_parameter, $.parameter)), ')'),

    let_declaration: ($) =>
      seq(choice('export', 'let'), optional('rec'), sep1('and', $.let_binding)),

    let_binding: ($) =>
      seq(
        field('pattern', $._pattern),
        choice(
          seq(
            $.type_annotation,
            optional(seq('=', field('body', $.expression))),
          ),
          seq('=', field('body', $.expression)),
        ),
      ),

    expression_statement: ($) => $.expression,

    parenthesized_expression: ($) =>
      seq('(', $.expression, optional($.type_annotation), ')'),

    value_identifier_path: ($) =>
      seq($.module_primary_expression, '.', $.value_identifier),

    function: ($) =>
      prec.left(
        seq(
          optional('async'),
          choice(
            field('parameter', $.value_identifier),
            $._definition_signature,
          ),
          '=>',
          field('body', $.expression),
        ),
      ),

    record: ($) =>
      seq(
        '{',
        choice(
          $._record_single_field,
          $._record_single_pun_field,
          commaSep2t($._record_element),
        ),
        '}',
      ),

    _record_element: ($) =>
      choice(
        $.spread_element,
        $.record_field,
        alias($._record_pun_field, $.record_field),
      ),

    record_field: ($) =>
      seq($._record_field_name, ':', optional('?'), $.expression),

    _record_single_field: ($) => seq($.record_field, optional(',')),

    _record_single_pun_field: ($) =>
      seq('?', $._record_field_name, optional(',')),

    _record_field_name: ($) =>
      choice(
        alias($.value_identifier, $.property_identifier),
        alias($.value_identifier_path, $.property_identifier),
      ),

    as_aliasing: ($) =>
      prec.left(seq('as', $._pattern, optional($.type_annotation))),

    call_expression: ($) =>
      prec(
        'call',
        seq(
          field('function', $.primary_expression),
          field('arguments', alias($.call_arguments, $.arguments)),
        ),
      ),

    pipe_expression: ($) =>
      prec.left(
        seq(
          choice($.primary_expression, $.block),
          choice('->', '|>'),
          choice($.primary_expression, $.block),
        ),
      ),

    module_pack: ($) =>
      seq(
        'module',
        parenthesize(choice($._module_structure, $.type_identifier_path)),
      ),

    _definition_signature: ($) =>
      seq(
        field('parameters', $.formal_parameters),
        optional(
          field(
            'return_type',
            alias($._return_type_annotation, $.type_annotation),
          ),
        ),
      ),

    formal_parameters: ($) =>
      seq('(', optional(choice(commaSep1t($.parameter), $.uncurry)), ')'),

    parameter: ($) =>
      seq(
        optional($.uncurry),
        choice(
          seq($._pattern, optional($.type_annotation)),
          $.labeled_parameter,
          $.unit,
          $.abstract_type,
        ),
      ),

    labeled_parameter: ($) =>
      seq(
        '~',
        $.value_identifier,
        optional($.as_aliasing),
        optional(
          choice(
            seq(
              $.type_annotation,
              optional(
                field('default_value', $._labeled_parameter_default_value),
              ),
            ),
            seq(
              field('default_value', $._labeled_parameter_default_value),
              optional($.type_annotation),
            ),
          ),
        ),
      ),

    abstract_type: ($) => seq('type', repeat1($.type_identifier)),

    _labeled_parameter_default_value: ($) =>
      seq('=', choice('?', $.expression)),

    // This negative dynamic precedence ensures that during error recovery,
    // unfinished constructs are generally treated as literal expressions,
    // not patterns.
    _pattern: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice(
            seq(optional('?'), $.value_identifier),
            $._literal_pattern,
            $._destructuring_pattern,
            $.polyvar_type_pattern,
            $.unit,
            $.module_pack,
            $.lazy_pattern,
            $.parenthesized_pattern,
            $.or_pattern,
            $.range_pattern,
            $.exception_pattern,
          ),
          optional($.as_aliasing),
        ),
      ),

    parenthesized_pattern: ($) =>
      seq('(', $._pattern, optional($.type_annotation), ')'),

    record_pattern: ($) =>
      seq(
        '{',
        commaSep1t(
          seq(
            optional('?'),
            choice($.value_identifier, $.value_identifier_path),
            optional(seq(':', $._pattern)),
          ),
        ),
        '}',
      ),

    tuple_item_pattern: ($) => seq($._pattern, optional($.type_annotation)),

    tuple_pattern: ($) => seq('(', commaSep2t($.tuple_item_pattern), ')'),

    array_pattern: ($) =>
      seq('[', optional(commaSep1t($._collection_element_pattern)), ']'),

    list_pattern: ($) =>
      seq(
        $._list_constructor,
        '{',
        optional(commaSep1t($._collection_element_pattern)),
        '}',
      ),

    _collection_element_pattern: ($) =>
      seq(choice($._pattern, $.spread_pattern), optional($.as_aliasing)),

    spread_pattern: ($) =>
      seq('...', choice($.value_identifier, $.list_pattern, $.array_pattern)),

    lazy_pattern: ($) => seq('lazy', $._pattern),

    jsx_element: ($) =>
      seq(
        field('open_tag', $.jsx_opening_element),
        repeat($._jsx_child),
        field('close_tag', $.jsx_closing_element),
      ),

    jsx_fragment: ($) => seq('<', '>', repeat($._jsx_child), '<', '/', '>'),

    jsx_expression: ($) =>
      seq(
        '{',
        optional(choice($._one_or_more_statements, $.spread_element)),
        '}',
      ),

    _jsx_child: ($) =>
      choice(
        $.value_identifier,
        $.value_identifier_path,
        $.number,
        $.string,
        $.template_string,
        $.character,
        $._jsx_element,
        $.jsx_fragment,
        $.block,
        $.spread_element,
        $.member_expression,
      ),

    jsx_opening_element: ($) =>
      prec.dynamic(
        -1,
        seq(
          '<',
          field('name', $._jsx_element_name),
          repeat(field('attribute', $._jsx_attribute)),
          '>',
        ),
      ),

    _jsx_identifier: ($) =>
      alias(choice($.value_identifier, $.module_identifier), $.jsx_identifier),

    nested_jsx_identifier: ($) =>
      prec(
        'member',
        seq(
          choice($._jsx_identifier, $.nested_jsx_identifier),
          '.',
          $._jsx_identifier,
        ),
      ),

    _jsx_element_name: ($) =>
      choice($._jsx_identifier, $.nested_jsx_identifier),

    jsx_closing_element: ($) =>
      seq('<', '/', field('name', $._jsx_element_name), '>'),

    jsx_self_closing_element: ($) =>
      seq(
        '<',
        field('name', $._jsx_element_name),
        repeat(field('attribute', $._jsx_attribute)),
        '/',
        '>',
      ),

    _jsx_attribute_name: ($) =>
      alias($.value_identifier, $.property_identifier),

    _jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

    jsx_attribute: ($) =>
      seq(
        optional('?'),
        $._jsx_attribute_name,
        optional(seq('=', optional('?'), $._jsx_attribute_value)),
      ),

    _jsx_attribute_value: ($) => choice($.primary_expression, $.jsx_expression),

    mutation_expression: ($) =>
      seq($._mutation_lvalue, choice('=', ':='), $.expression),

    _mutation_lvalue: ($) =>
      choice($.value_identifier, $.member_expression, $.subscript_expression),

    decorator: ($) =>
      choice(
        alias($._decorator_inline, $.decorator_identifier),
        seq(alias($._decorator, $.decorator_identifier), $.decorator_arguments),
      ),

    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('record', $.primary_expression),
          '.',
          optional(
            seq(
              field(
                'module',
                seq(repeat(seq($.module_identifier, '.')), $.module_identifier),
              ),
              '.',
            ),
          ),
          field('property', alias($.value_identifier, $.property_identifier)),
        ),
      ),

    spread_element: ($) => seq('...', $.expression),

    lazy_expression: ($) => seq('lazy', $.expression),

    binary_expression: ($) =>
      choice(
        ...[
          ['&&&', 'binary_bitand'],
          ['&&', 'binary_and'],
          ['|||', 'binary_bitor'],
          ['||', 'binary_or'],
          ['^^^', 'binary_bitxor'],
          ['++', 'binary_plus'],
          ['+', 'binary_plus'],
          ['+.', 'binary_plus'],
          ['-', 'binary_plus'],
          ['-.', 'binary_plus'],
          ['*', 'binary_times'],
          ['*.', 'binary_times'],
          ['%', 'binary_times'],
          ['**', 'binary_pow', 'right'],
          ['/', 'binary_times'],
          ['/.', 'binary_times'],
          ['<<', 'binary_shift'],
          ['>>>', 'binary_shift'],
          ['>>', 'binary_shift'],
          ['<', 'binary_relation'],
          ['<=', 'binary_relation'],
          ['==', 'binary_relation'],
          ['===', 'binary_relation'],
          ['!=', 'binary_relation'],
          ['!==', 'binary_relation'],
          ['>=', 'binary_relation'],
          ['>', 'binary_relation'],
        ].map(([operator, precedence, associativity]) =>
          (associativity === 'right' ? prec.right : prec.left)(
            precedence,
            seq(
              field('left', $.expression),
              field('operator', operator),
              field('right', $.expression),
            ),
          ),
        ),
      ),

    variant: ($) =>
      prec.right(
        seq(
          choice($.variant_identifier, $.nested_variant_identifier),
          optional(alias($.variant_arguments, $.arguments)),
        ),
      ),

    polyvar: ($) =>
      prec.right(
        seq(
          $.polyvar_identifier,
          optional(alias($.variant_arguments, $.arguments)),
        ),
      ),

    module_identifier_path: ($) =>
      path($.module_primary_expression, $.module_identifier),

    variant_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    polyvar_identifier: ($) =>
      seq(
        '#',
        choice(
          /[a-zA-Z0-9_']+/,
          seq(optional('\\'), alias($.string, $.polyvar_string)),
        ),
      ),

    type_identifier: ($) =>
      choice($._identifier, /'[a-zA-Z0-9_']*/, $._escape_identifier),

    _identifier: (_) => /[a-z_][a-zA-Z0-9_']*/,

    value_identifier: ($) =>
      choice($._identifier, $._reserved_identifier, $._escape_identifier),

    _escape_identifier: ($) => token(seq('\\"', /[^"]+/, '"')),

    module_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    number: ($) => {
      // OCaml: https://github.com/tree-sitter/tree-sitter-ocaml/blob/f1106bf834703f1f2f795da1a3b5f8f40174ffcc/ocaml/grammar.js#L26
      const hex_literal = seq(
        optional(choice('-', '+')),
        /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*(\.[0-9A-Fa-f_]*)?([pP][+\-]?[0-9][0-9_]*)?[g-zG-Z]?/,
      );

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
      const exponent_part = seq(choice('e', 'E'), signed_integer);

      const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        optional(choice('-', '+')),
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        'n',
      );

      const decimal_integer_literal = choice(
        repeat1('0'),
        seq(repeat('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
      );

      const decimal_literal = seq(
        optional(choice('-', '+')),
        choice(
          seq(
            decimal_integer_literal,
            '.',
            optional(decimal_digits),
            optional(exponent_part),
          ),
          seq('.', decimal_digits, optional(exponent_part)),
          seq(decimal_integer_literal, exponent_part),
          decimal_digits,
        ),
      );

      const int_32_64 = seq(
        optional(choice('-', '+')),
        choice(
          decimal_integer_literal,
          binary_literal,
          octal_literal,
          hex_literal,
        ),
        choice('L', 'l'),
      );

      return token(
        choice(
          hex_literal,
          decimal_literal,
          binary_literal,
          octal_literal,
          bigint_literal,
          int_32_64,
        ),
      );
    },

    unit: ($) => seq('(', ')'),
    unit_type: ($) => 'unit',

    true: ($) => 'true',
    false: ($) => 'false',

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias($.unescaped_double_string_fragment, $.string_fragment),
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    template_string: ($) => seq('`', optional($.template_string_content), '`'),

    template_string_content: ($) =>
      repeat1(
        choice(
          $._template_chars,
          $.template_substitution,
          /\s/,
          choice(alias('\\`', $.escape_sequence), $.escape_sequence),
        ),
      ),

    uncurry: ($) => '.',
